--- a/src/ECharts.Blazor/Series.razor
+++ b/src/ECharts.Blazor/Series.razor
@@ -4,7 +4,7 @@
 @typeparam TValue
 
 @code {
-    protected virtual SeriesTypes Type { get; set; }
+    protected virtual SeriesTypes Type { get; }
 
     [Parameter] public string? Name { get; set; }
 
